Fix: galery animation on ios

--- a/src/sections/galery/Galery.module.css
+++ b/src/sections/galery/Galery.module.css
@@ -52,6 +52,18 @@
 	}
 }
 
+@-webkit-keyframes scroll {
+	to {
+		-webkit-transform: translateX(calc(-100% - 1rem));
+	}
+}
+
+@-moz-keyframes scroll {
+	to {
+		-moz-transform: translateX(calc(-100% - 1rem));
+	}
+}
+
 .carousel:hover .imagesContainer {
 	animation-play-state: paused;
 }
